cabal-version:       >=1.24
name:                btls
version:             0.0.0.0
synopsis:            BoringSSL-backed TLS and cryptography library
description:
  A TLS and cryptography library backed by BoringSSL, Google's fork of OpenSSL.
author:              Benjamin Barenblat
maintainer:          bbaren@google.com
category:            Network
build-type:          Custom
tested-with:         GHC ==8.0.2
extra-source-files:  third_party

custom-setup
  setup-depends:       base
                     , Cabal >=1.4 && <2.1
                     , directory <1.4
                     , filepath <1.5

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    CApiFFI
                     , ExistentialQuantification
                     , NamedFieldPuns
                     , Rank2Types
  build-tools:         hsc2hs
  include-dirs:        third_party/boringssl/src/include
  ghc-options:         -Weverything
                       -Wno-all-missed-specialisations
                       -Wno-implicit-prelude
                       -Wno-missing-import-lists
                       -Wno-safe -Wno-unsafe
                       -optl-Wl,-z,relro -optl-Wl,-z,now -optl-Wl,-s
  exposed-modules:     Data.Digest
                     , Data.Digest.Sha1
                     , Data.Digest.Sha2
  other-modules:       Cleanse
                     , Data.Digest.Internal
  -- Use special names for the BoringSSL libraries to avoid accidentally pulling
  -- in OpenSSL.
  extra-libraries:     btls_crypto
  build-depends:       base >=4.9 && <4.10
                     , base-compat >=0.9.3 && <0.10
                     , bytestring >=0.10 && <0.11

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
  ghc-options:         -Weverything
                       -Wno-all-missed-specialisations
                       -Wno-implicit-prelude
                       -Wno-missing-import-lists
                       -Wno-missing-signatures
                       -Wno-safe -Wno-unsafe
                       -optl-Wl,-z,relro -optl-Wl,-z,now -optl-Wl,-s
  main-is:             Tests.hs
  other-modules:       Data.Digest.HashTests
                     , Data.Digest.Sha1Tests
                     , Data.Digest.Sha2Tests
  build-depends:       base >=4.9 && <4.10
                     , btls
                     , bytestring >=0.10 && <0.11
                     , process >=1.4.3 && <1.5
                     , smallcheck >=1.1.1 && <1.2
                     , smallcheck-series >=0.2 && <0.7
                     , tasty >=0.11.0.4 && <0.12
                     , tasty-hunit >=0.9.2 && <0.10
                     , tasty-smallcheck >=0.8.1 && <0.9
