-- Copyright 2017 Google LLC
--
-- Licensed under the Apache License, Version 2.0 (the "License"); you may not
-- use this file except in compliance with the License. You may obtain a copy of
-- the License at
--
--     https://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-- WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-- License for the specific language governing permissions and limitations under
-- the License.

cabal-version:       >=1.24
name:                btls
version:             0.0.0.0
synopsis:            BoringSSL-backed TLS and cryptography library
description:
  A TLS and cryptography library backed by BoringSSL, Google's fork of OpenSSL.
copyright:           2018 Google LLC
license:             OtherLicense
license-file:        LICENSE
author:              Benjamin Barenblat
maintainer:          bbaren@google.com
category:            Network
build-type:          Custom
tested-with:         GHC ==8.0.2
extra-source-files:  cbits
                   , third_party

custom-setup
  setup-depends:       base
                     , Cabal >=1.4 && <2.1
                     , directory <1.4
                     , filepath <1.5
                     , gtk2hs-buildtools >=0.13.2.1 && <0.14

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-tools:         c2hs
  include-dirs:        third_party/boringssl/src/include
  ghc-options:         -Werror
                       -w
                       -Wderiving-typeable
                       -Wduplicate-exports
                       -Widentities
                       -Wincomplete-patterns
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-fields
                       -Wmissing-methods
                       -Wmissing-monadfail-instances
                       -Wnoncanonical-monad-instances
                       -Wnoncanonical-monadfail-instances
                       -Wnoncanonical-monoid-instances
                       -Woverlapping-patterns
                       -Wredundant-constraints
                       -Wsemigroup
                       -Wtabs
                       -Wunused-binds
                       -Wunused-do-bind
                       -Wunused-foralls
                       -Wunused-imports
                       -Wunused-matches
                       -Wunused-type-variables
                       -Wwrong-do-bind
                       -optl-Wl,-z,relro -optl-Wl,-z,now -optl-Wl,-s
  exposed-modules:     Codec.Crypto.HKDF
                     , Data.Digest
                     , Data.HMAC
  other-modules:       Data.Digest.Internal
                     , Foreign.Ptr.Cast
                     , Foreign.Ptr.ConstantTimeEquals
                     , Foreign.Ptr.CreateWithFinalizer
                     , Internal.Base
                     , Internal.Digest
                     , Internal.HKDF
                     , Internal.HMAC
                     , Result
                     , Types
  c-sources:           cbits/btls.c
  -- Use special names for the BoringSSL libraries to avoid accidentally pulling
  -- in OpenSSL.
  extra-libraries:     btls_crypto
  build-depends:       base >=4.9 && <4.10
                     , base-compat >=0.9.3 && <0.10
                     , bytestring >=0.10 && <0.11

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
  ghc-options:         -Werror
                       -w
                       -Wderiving-typeable
                       -Wduplicate-exports
                       -Widentities
                       -Wincomplete-patterns
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-fields
                       -Wmissing-methods
                       -Wmissing-monadfail-instances
                       -Wnoncanonical-monad-instances
                       -Wnoncanonical-monadfail-instances
                       -Wnoncanonical-monoid-instances
                       -Woverlapping-patterns
                       -Wredundant-constraints
                       -Wsemigroup
                       -Wtabs
                       -Wunused-binds
                       -Wunused-do-bind
                       -Wunused-foralls
                       -Wunused-imports
                       -Wunused-matches
                       -Wunused-type-variables
                       -Wwrong-do-bind
                       -optl-Wl,-z,relro -optl-Wl,-z,now -optl-Wl,-s
  main-is:             Tests.hs
  other-modules:       Codec.Crypto.HKDFTests
                     , Data.DigestTests
                     , Data.Digest.HashTests
                     , Data.Digest.MD5Tests
                     , Data.Digest.SHA1Tests
                     , Data.Digest.SHA2Tests
                     , Data.HMACTests
  build-depends:       base >=4.9 && <4.10
                     , base16-bytestring >=0.1.1.6 && <0.2
                     , btls
                     , bytestring >=0.10 && <0.11
                     , process >=1.4.2 && <1.5
                     , smallcheck >=1.1.1 && <1.2
                     , smallcheck-series >=0.2 && <0.7
                     , tasty >=0.11.0.4 && <0.12
                     , tasty-hunit >=0.9.2 && <0.10
                     , tasty-smallcheck >=0.8.1 && <0.9
